
### Changed
- Refined `AppWindow` layout to a two-column design for better use of screen space.
- Improved component visibility: inactive UI elements are now disabled instead of hidden.
- Refactored `DistributionFunctions` to support histogram accumulation.
- Refactored test suite to utilize the `Trajectory` object for consistent frame handling.

### Fixed
- Fixed a syntax error in `src/main.cpp`.

## [1.9.4] 2026-01-26
 
 ### Added
 - Added `Element-Any` and `Any-Any` columns to the Coordination Number (CN) distribution for aggregated neighbor counting.
 - Added descriptions and unit metadata to HDF5 output groups and datasets.
 - Added trajectory revision to support removing duplicated frames.
 - Added parsing of frame energy from `.arc` files.
 
 ### Changed
 - Improved HDF5 internal structure by sanitizing group names (e.g., removing parentheses) and adding consistent unit attributes (`Angstrom`, `Angstrom^-1`, etc.).
 - Updated project version to 1.9.4 in `CMakeLists.txt`.

## [1.9.3] 2026-01-26

### Changed
- Refactored tests to use Trajectory object for Cell and cutoff management.
- Updated project version to 1.9.3 in CMakeLists.txt.

## [1.9.1] 2026-01-23


### Added
- Added support for reading ARC trajectory files (`.arc`).
- Implemented `Trajectory` class for handling multi-frame simulations.
- Added `readTrajectory` function to `FileIO`.
- Added unit tests for ARC file reading and duplicate frame handling.

### Fixed
- Fixed compilation issues on Windows.

## [1.9.0] 2026-01-22

### Added
- Migrated data output to HDF5 format (via `.h5` files), providing a consolidated and more efficient alternative to multiple CSV files.
- Integrated **HighFive** (v2.10.1) for modern C++ HDF5 support.

### Fixed
- Resolved CMake configuration error ("Compatibility with CMake < 3.5 has been removed") by updating HighFive and setting `CMAKE_POLICY_VERSION_MINIMUM` to 3.5.