@@ -43,14 +43,14 @@ if (NOT Slint_FOUND)
 endif (NOT Slint_FOUND)
 
 # HDF5 dependency
-find_package(HDF5 QUIET COMPONENTS CXX)
+find_package(HDF5 QUIET COMPONENTS CXX HL)
 if (NOT HDF5_FOUND)
   message("HDF5 could not be located. Downloading it from GitHub and building it locally.")
   include(FetchContent)
   # HDF5 options for FetchContent
   set(HDF5_BUILD_CPP_LIB ON CACHE BOOL "Build HDF5 C++ Library" FORCE)
   set(HDF5_BUILD_EXAMPLES OFF CACHE BOOL "Build HDF5 Examples" FORCE)
-  set(HDF5_BUILD_HL_LIB OFF CACHE BOOL "Build HDF5 High Level Library" FORCE)
+  set(HDF5_BUILD_HL_LIB ON CACHE BOOL "Build HDF5 High Level Library" FORCE)
   set(HDF5_BUILD_TOOLS OFF CACHE BOOL "Build HDF5 Tools" FORCE)
   set(HDF5_BUILD_FORTRAN OFF CACHE BOOL "Build HDF5 Fortran" FORCE)
   set(HDF5_BUILD_JAVA OFF CACHE BOOL "Build HDF5 Java" FORCE)
@@ -72,6 +72,33 @@ if (NOT HDF5_FOUND)
     elseif(TARGET hdf5_cpp-static)
       add_library(HDF5::HDF5 ALIAS hdf5_cpp-static)
     endif()
+    if(TARGET hdf5_hl-shared)
+      add_library(HDF5::HDF5_HL ALIAS hdf5_hl-shared)
+    elseif(TARGET hdf5_hl-static)
+      add_library(HDF5::HDF5_HL ALIAS hdf5_hl-static)
+    endif()
+  endif()
+endif()
+
+# Ensure HDF5::HDF5_HL is available
+if(NOT TARGET HDF5::HDF5_HL)
+  message(STATUS "Attempting to find HDF5 HL target to alias...")
+  if(TARGET hdf5::hdf5_hl-static)
+     add_library(HDF5::HDF5_HL ALIAS hdf5::hdf5_hl-static)
+  elseif(TARGET hdf5::hdf5_hl-shared)
+     add_library(HDF5::HDF5_HL ALIAS hdf5::hdf5_hl-shared)
+  elseif(TARGET hdf5::hdf5_hl)
+     add_library(HDF5::HDF5_HL ALIAS hdf5::hdf5_hl)
+  elseif(TARGET hdf5_hl-static)
+     add_library(HDF5::HDF5_HL ALIAS hdf5_hl-static)
+  elseif(TARGET hdf5_hl-shared)
+     add_library(HDF5::HDF5_HL ALIAS hdf5_hl-shared)
+  endif()
+  
+  if(TARGET HDF5::HDF5_HL)
+      message(STATUS "HDF5::HDF5_HL aliased successfully")
+  else()
+      message(WARNING "Could not find HDF5 HL target to alias (hdf5::hdf5_hl, etc). Linking might fail.")
   endif()
 endif()
 
@@ -131,7 +158,7 @@ target_include_directories(correlation_lib PUBLIC
 target_compile_features(correlation_lib PUBLIC cxx_std_${CXX_STANDARD})
 target_compile_definitions(correlation_lib PUBLIC _PSTL_PAR_BACKEND_TBB)
 target_link_libraries(correlation_lib PRIVATE TBB::tbb TBB::tbbmalloc)
-target_link_libraries(correlation_lib PUBLIC HighFive HDF5::HDF5)
+target_link_libraries(correlation_lib PUBLIC HighFive HDF5::HDF5 HDF5::HDF5_HL)
 
 #------------------------------------------------------------------
 # Executable Target (correlation)
